# artem

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASE-CHECKLIST.md  build.rs  changelog.md  clippy.toml  foo.txt  output.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yaml  continuous_integration.yaml  release_build.yaml
assets/: abraham_lincoln.html  abraham_lincoln.txt  abraham_lincoln_background.html  abraham_lincoln_border.html  abraham_lincoln_border.txt  abraham_lincoln_border_outline.txt  abraham_lincoln_outline.html  abraham_lincoln_outline.txt  abraham_lincoln_outline_hysteresis.txt  update_tests.sh
assets/aur/: PKGBUILD-bin  PKGBUILD-stable  update_PKGBUILD.sh
assets/standard_test_img/: standard_test_img.html  standard_test_img.txt  standard_test_img_background.html  standard_test_img_border.html  standard_test_img_border.txt  standard_test_img_border_outline.html  standard_test_img_border_outline.txt  standard_test_img_outline.html  standard_test_img_outline.txt  standard_test_img_outline_hysteresis.html  standard_test_img_outline_hysteresis.txt
benches/: artem_bench.rs
benches/benchmarks/: default.rs  hysteresis.rs  mod.rs  outline.rs  size.rs  threads.rs  util.rs
deployment/asset/: _artem  _artem.ps1  artem.1  artem.bash  artem.elv  artem.fish
src/: cli.rs  config.rs  conversion_options.rs  image_conversion.rs  lib.rs  main.rs  options.rs  pixel.rs  util.rs
src/filter/: mod.rs
tests/: arguments_test.rs  cli.rs  integration_tests.rs
tests/arguments/: characters.rs  color.rs  input.rs  mod.rs  output.rs  scale.rs  size.rs  transform.rs
tests/common/: mod.rs
