[package]
name = "artem"
version = "0.5.0"
authors = ["Jonathan (@FineFindus)"]
edition = "2021"
description = "An easy program to convert an image to an ascii image"
readme = "README.md"
license-file = "LICENSE"
homepage = "https://github.com/finefindus/artem"
repository = "https://github.com/finefindus/artem"
catogories = ["command-line-utilities"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#build file
build = "build.rs"

[profile.release]
opt-level = 3

#bin definition
[[bin]]
name = "artem"
path = "src/main.rs"


[build-dependencies]
clap = "3.1.2"
clap_complete = "3.1.0"
clap_mangen = "0.1.2"

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"


[dependencies]
image = "0.24.1"
colored = "2"
clap = "3.1.2"
terminal_size = "0.1.17"
log = "0.4.14"
env_logger = "0.9.0"


[package.metadata.deb]
section = "graphics"
priority = "optional"
assets = [
      #file locations are from https://github.com/BurntSushi/ripgrep/blob/master/Cargo.toml
      ["target/release/artem", "usr/bin/", "755"],
      ["deployment/asset/artem.1", "usr/share/man/man1/artem.1", "644"],
      ["CHANGELOG.md", "usr/share/doc/artem/CHANGELOG", "644"],
      ["LICENSE", "usr/share/doc/artem/", "644"],
      #the completion files and man page is generated and copied by the build script
      ["deployment/asset/artem.bash", "usr/share/bash-completion/completions/artem", "644"],
      ["deployment/asset/artem.fish", "usr/share/fish/vendor_completions.d/aretem.fish", "644"],
      ["deployment/asset/_artem", "usr/share/zsh/vendor-completions/", "644"],
]
extended-description = """\
artem is a cli programm to convert images to ascii art. 
By default it uses truecolor, if not support it fallsback to ansi colors. It supports multiple image formats like jpg, png, gif, webp, and many more.
"""