[package]
name = "artem"
version = "1.2.1"
authors = ["@FineFindus"]
description = "Convert images from multiple formats (jpg, png, webp, etc…) to ASCII art"
edition = "2021"
rust-version = "1.70.0"
readme = "README.md"
license = "MPL-2.0"
homepage = "https://github.com/finefindus/artem"
repository = "https://github.com/finefindus/artem"
categories = ["command-line-utilities"]

#build file
build = "build.rs"

[profile.release]
opt-level = 3

#bin definition
[[bin]]
name = "artem"
path = "src/main.rs"

[lib]
name = "artem"
path = "src/lib.rs"

[[bench]]
name = "artem_bench"
harness = false

[build-dependencies]
clap = { version = "3.2", features = ["cargo"]}
clap_complete = "3.2"
clap_mangen = "0.1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
criterion = "0.5"
pretty_assertions = "1.3.0"

[dependencies]
image = "0.24.6"
colored = "2"
clap = { version = "3.2", features = ["cargo"]}
terminal_size = "0.2.1"
log = "0.4"
env_logger = "0.10"
once_cell = "1.18.0"
ureq = { version = "2.7.1", optional = true}

[features]
default = ["web_image"]
web_image = ["ureq"]


[package.metadata.deb]
section = "graphics"
priority = "optional"
assets = [
      #file locations are partailly from https://github.com/BurntSushi/ripgrep/blob/master/Cargo.toml
      ["target/release/artem", "usr/bin/", "755"],
      ["deployment/assets/artem.1", "usr/share/man/man1/artem.1", "644"],
      ["README.md", "usr/share/doc/artem/README", "644"],
      ["CHANGELOG.md", "usr/share/doc/artem/CHANGELOG", "644"],
      ["LICENSE", "usr/share/doc/artem/", "644"],
      #the completion files and man page is generated and copied by the build script
      ["deployment/assets/artem.bash", "usr/share/bash-completion/completions/artem", "644"],
      ["deployment/assets/artem.fish", "usr/share/fish/vendor_completions.d/artem.fish", "644"],
      ["deployment/assets/_artem", "usr/share/zsh/vendor-completions/", "644"],
]
extended-description = """\
artem is a rust command-line interface to convert images from multiple formats (jpg, png, webp, gif and many more) to ASCII art, inspired by jp2a.

It suppots modern features, such as truecolor by default, although ANSI-Colors can be used as a fallback when truecolor is disabled.
It also respects environment variables, like NO_COLOR, to completely disable colored output. 

For questions, bug reports or feedback, please visit https://github.com/finefindus/artem.
"""
