[package]
name = "artem"
version = "3.0.0"
authors = ["@FineFindus"]
description = "Convert images from multiple formats (jpg, png, webp, etc…) to ASCII art"
edition = "2021"
rust-version = "1.74.0"
readme = "README.md"
license = "MPL-2.0"
homepage = "https://github.com/FineFindus/artem"
repository = "https://github.com/FineFindus/artem"
keywords = ["text", "ascii", "ascii-art", "terminal"]
categories = ["command-line-utilities", "multimedia::images"]
#exclude test image files from cargo upload
exclude = ["/assets", "/examples"]

#build file
build = "build.rs"

[profile.release]
opt-level = 3

#bin definition
[[bin]]
name = "artem"
path = "src/main.rs"

[lib]
name = "artem"
path = "src/lib.rs"

[[bench]]
name = "artem_bench"
harness = false

[build-dependencies]
clap = { version = "4.5", features = ["cargo", "derive"] }
clap_complete = "4.5"
clap_mangen = "0.2"
log = "0.4"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
criterion = "0.5"
pretty_assertions = "1.4.1"

[dependencies]
image = "0.25.4"
colored = "2.1"
clap = { version = "4.5", features = ["cargo"] }
terminal_size = "0.4.0"
log = "0.4"
env_logger = "0.11"
once_cell = "1.20.0"
ureq = { version = "2.10", optional = true }
anstyle-svg = "0.1"

[features]
default = ["web_image"]
web_image = ["ureq"]


[package.metadata.deb]
section = "graphics"
priority = "optional"
assets = [
    #file locations are partailly from https://github.com/BurntSushi/ripgrep/blob/master/Cargo.toml
    [
        "target/release/artem",
        "usr/bin/",
        "755",
    ],
    [
        "deployment/assets/artem.1",
        "usr/share/man/man1/artem.1",
        "644",
    ],
    [
        "README.md",
        "usr/share/doc/artem/README",
        "644",
    ],
    [
        "CHANGELOG.md",
        "usr/share/doc/artem/CHANGELOG",
        "644",
    ],
    [
        "LICENSE",
        "usr/share/doc/artem/",
        "644",
    ],
    #the completion files and man page is generated and copied by the build script
    [
        "deployment/assets/artem.bash",
        "usr/share/bash-completion/completions/artem",
        "644",
    ],
    [
        "deployment/assets/artem.fish",
        "usr/share/fish/vendor_completions.d/artem.fish",
        "644",
    ],
    [
        "deployment/assets/_artem",
        "usr/share/zsh/vendor-completions/",
        "644",
    ],
]
extended-description = """\
artem is a rust command-line interface to convert images from multiple formats (jpg, png, webp, gif and many more) to ASCII art, inspired by jp2a.

It suppots modern features, such as truecolor by default, although ANSI-Colors can be used as a fallback when truecolor is disabled.
It also respects environment variables, like NO_COLOR, to completely disable colored output. 

For questions, bug reports or feedback, please visit https://github.com/FineFindus/artem.
"""
